# axum-inertia

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
src/: config.rs  lib.rs  page.rs  partial.rs  props.rs  request.rs  response.rs  vite.rs
